--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,9 @@
   .input_wrapper {
     width: 324px;
     height: 48px;
-    box-shadow: 0px 12px 24px 0px rgba(27, 59, 119, 0.05), 0px 24px 60px 0px rgba(6, 47, 125, 0.05),
-      0px 2px 4px 0px rgba(7, 4, 146, 0.1);
+    box-shadow: 0px 12px 24px 0px rgba(27, 59, 119, 0.05), 0px 24px 60px 0px rgba(6, 47, 125, 0.05), 0px 2px 4px 0px rgba(7, 4, 146, 0.1);
+  }
+  .input_shadow {
+    box-shadow: 0px 12px 24px 0px rgba(27, 59, 119, 0.05), 0px 24px 60px 0px rgba(6, 47, 125, 0.05), 0px 2px 4px 0px rgba(7, 4, 146, 0.1);
   }
 }
